# cotodo

./: Cargo.toml  README.md  plan.md  sum.md
.github/workflows/: rust.yml
src/: main.rs
src/ai/: mod.rs
src/models/: mod.rs
src/server/: mod.rs
src/ui/: mod.rs
